--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -19,6 +19,10 @@
                                         href="{% url 'pages:about' %}">{% trans 'About'%}</a></li>
                                 <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
                                         href="{% url 'pages:blog' %}">{% trans 'Blog'%}</a></li>
+                                <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
+                                        href="https://muhammadyunus002.pythonanywhere.com/uz/">UZB</a></li>
+                                <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
+                                        href="https://muhammadyunus002.pythonanywhere.com/en/">ENG</a></li>
                             </ul>
                         </nav>
                     </div>
