--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -20,7 +20,7 @@
                                 <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
                                         href="{% url 'pages:blog' %}">{% trans 'Blog'%}</a></li>
                                 <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
-                                        href="https://muhammadyunus002.pythonanywhere.com/uz/">UZB</a></li>
+                                        href="https://muhammadyunus002.pythonanywhere.com/uz/">|   UZB</a></li>
                                 <li class="{% if request.path == '/blog/' %}active{% endif %}"><a
                                         href="https://muhammadyunus002.pythonanywhere.com/en/">ENG</a></li>
                             </ul>
