--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,6 +1,8 @@
 {% load static %}
 {% load i18n %}
 <header>
+<h1>hello world</h1>
+
     <div id="sticky-header" class="header-top-area header-2 pr-60 pl-60">
         <div class="container-fluid">
             <div class="row">
